--- a/KpopZtationFrontEnd/KpopZtationFrontEnd.csproj
+++ b/KpopZtationFrontEnd/KpopZtationFrontEnd.csproj
@@ -88,6 +88,7 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
     </Content>
+    <Content Include="View\Home.aspx" />
     <Content Include="View\Login.aspx" />
     <Content Include="View\Register.aspx" />
     <None Include="Properties\Settings.settings">
@@ -145,6 +146,13 @@
     </Compile>
     <Compile Include="Service\JsonService.cs" />
     <Compile Include="Service\WebServiceInstance.cs" />
+    <Compile Include="View\Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="View\Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+    </Compile>
     <Compile Include="View\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
