--- a/KpopZtationFrontEnd/KpopZtationFrontEnd.csproj
+++ b/KpopZtationFrontEnd/KpopZtationFrontEnd.csproj
@@ -43,6 +43,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="de.lkraemer.nemmet, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\de.lkraemer.nemmet.1.0.2\lib\netstandard2.0\de.lkraemer.nemmet.dll</HintPath>
+    </Reference>
+    <Reference Include="de.lkraemer.tagbuilder, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\de.lkraemer.tagbuilder.1.0.2\lib\netstandard2.0\de.lkraemer.tagbuilder.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -78,6 +84,31 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Albums\638058597622333864.jfif" />
+    <Content Include="Assets\Albums\638058600253472624.jpg" />
+    <Content Include="Assets\Albums\638058602735846856.jpg" />
+    <Content Include="Assets\Albums\638058716701119579.jpg" />
+    <Content Include="Assets\Albums\638058717003784490.jpg" />
+    <Content Include="Assets\Albums\638059437442094314.jfif" />
+    <Content Include="Assets\Albums\638059438205501702.jpg" />
+    <Content Include="Assets\Albums\638059439116596296.jpg" />
+    <Content Include="Assets\Albums\638059439942434092.jfif" />
+    <Content Include="Assets\Albums\638059442482614063.jfif" />
+    <Content Include="Assets\Albums\638059446920356665.jfif" />
+    <Content Include="Assets\Albums\638059447624756394.jfif" />
+    <Content Include="Assets\Albums\638059449025055368.jpg" />
+    <Content Include="Assets\Albums\638059449905363164.jpg" />
+    <Content Include="Assets\Albums\638059451370799986.jfif" />
+    <Content Include="Assets\Artists\638057862770194070.jpeg" />
+    <Content Include="Assets\Artists\638057899497035774.jfif" />
+    <Content Include="Assets\Artists\638057900448119533.jfif" />
+    <Content Include="Assets\Artists\638058485179546128.jfif" />
+    <Content Include="Assets\Artists\638058486287141139.jfif" />
+    <Content Include="Assets\Artists\638058489004609070.jfif" />
+    <Content Include="Assets\Artists\638058554486609538.jfif" />
+    <Content Include="Assets\Artists\638059446432559006.jfif" />
+    <Content Include="Assets\Artists\638059447901481658.jfif" />
+    <Content Include="Assets\Artists\638059450808002463.jfif" />
     <Content Include="Model\Model.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Model.Context.cs</LastGenOutput>
@@ -103,6 +134,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\ArtistController.cs" />
     <Compile Include="Controller\AuthenticationController.cs" />
     <Compile Include="Model\Album.cs">
       <DependentUpon>Model.tt</DependentUpon>
