Add Album View and Detail

--- a/KpopZtationBackEnd/KpopZtationBackEnd.csproj
+++ b/KpopZtationBackEnd/KpopZtationBackEnd.csproj
@@ -96,6 +96,8 @@
     <Content Include="WebService.asmx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factory\AlbumFactory.cs" />
+    <Compile Include="Handler\AlbumHandler.cs" />
     <Compile Include="Handler\CustomerHandler.cs" />
     <Compile Include="Handler\JsonHandler.cs" />
     <Compile Include="Model\Album.cs">
