--- a/KpopZtationFrontEnd/packages.config
+++ b/KpopZtationFrontEnd/packages.config
@@ -3,6 +3,7 @@
   <package id="de.lkraemer.nemmet" version="1.0.2" targetFramework="net472" />
   <package id="de.lkraemer.tagbuilder" version="1.0.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
 </packages>
